fix: aligning footer always at the end of the screen

--- a/src/app/pages/character-listing/character-listing.component.scss
+++ b/src/app/pages/character-listing/character-listing.component.scss
@@ -1,5 +1,6 @@
 .container {
-  height: 100dvh;
+  height: auto;
+  min-height: calc(100dvh - 88px);
   padding-top: 72px;
   background: var(--background);
   color: var(--text-title);
